uploading the most recent code

--- a/to-do-design.css
+++ b/to-do-design.css
@@ -9,6 +9,7 @@ body {
     background-color: white;
     color: black;
     text-decoration: none;
+    box-sizing: border-box;
 }
 .name {
     text-align: center;
@@ -43,7 +44,7 @@ body {
 .main h1 {
     text-indent: 50px;
     font-size: 30px;
-    color: blue;
+    color: rgb(0, 132, 255);
 }
 .footer {
     flex: 1;
@@ -63,10 +64,6 @@ body {
 .footer ul li a:hover {
     color: rgb(255,115,232);
 }
-/* Include the padding and border in an element's total width and height */
-* {
-  box-sizing: border-box;
-}
 
 /* Remove margins and padding from the list */
 .list ul {
@@ -80,7 +77,7 @@ body {
   position: relative;
   padding: 12px 8px 12px 40px;
   list-style-type: none;
-  background: #eee;
+  background: rgb(214, 255, 231);
   font-size: 18px;
   transition: 0.2s;
   
@@ -93,18 +90,18 @@ body {
 
 /* Set all odd list items to a different color (zebra-stripes) */
 .list ul li:nth-child(odd) {
-  background: #f9f9f9;
+  background: rgb(104, 255, 167);
 }
 
 /* Darker background-color on hover */
 .list ul li:hover {
-  background: #ddd;
+  background: rgb(78, 249, 255);
 }
 
 /* When clicked on, add a background color and strike out text */
 .list ul li.checked {
-  background: rgb(117, 116, 116);
-  color: #fff;
+  background: rgb(2, 98, 18);
+  color: rgb(190, 190, 190);
   text-decoration: line-through;
 }
 
@@ -128,11 +125,13 @@ body {
   right: 0;
   top: 0;
   padding: 12px 16px 12px 16px;
+  
+  background-color: #ffffff;
 }
 
 .close:hover {
-  background-color: #ff5050;
-  color: white;
+  background-color: #ff0000;
+  color: rgb(255, 255, 255);
 }
 
 /* Style the header */
@@ -155,7 +154,7 @@ input {
   margin: 0;
   border: none;
   border-radius: 0;
-  width: 75%;
+  width: 90%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -164,9 +163,9 @@ input {
 /* Style the "Add" button */
 .addBtn {
   padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
+  width: 10%;
+  background:rgb(2, 170, 100);
+  color: rgb(255, 255, 255);
   float: left;
   text-align: center;
   font-size: 16px;
@@ -176,7 +175,7 @@ input {
 }
 
 .addBtn:hover {
-  background-color: #bbb;
+  background-color: rgb(34, 204, 219);
 }
 
 h2 {
