--- a/pomodoro/pomodoro.css
+++ b/pomodoro/pomodoro.css
@@ -1,3 +1,8 @@
+/*
+This code was adapted from an open-source project distributed under the MIT license by Raj Gupta
+https://codepen.io/rajdgreat007/pen/ZpZWbw
+*/
+
 #container{
   border:1px solid #0C374D;
   border-radius :20px;
