--- a/Todo/to-do-design.css
+++ b/Todo/to-do-design.css
@@ -1,3 +1,7 @@
+/*
+This code was adapted from https://www.w3schools.com/howto/howto_js_todolist.asp
+*/
+
 body {
   margin: 0;
   min-width: 250px;
