--- a/home.css
+++ b/home.css
@@ -1,3 +1,5 @@
+<! -- This code was adapted from https://css-tricks.com/how-to-create-a-notebook-design-with-css/ -->
+<! -- This code was adapted from https://1stwebdesigner.com/15-css-background-effects/ -->
 body {
 background: rgb(44,92,172);
 background: linear-gradient(90deg, rgba(44,92,172,1) 0%, rgba(70,141,252,1) 100%);
